Sqiush squans squish sqash the bugs all die *sung to the tune of ring around the rosie

--- a/static/styles.css
+++ b/static/styles.css
@@ -35,6 +35,8 @@ p {
 }
 
 p.cdown{
+    margin: none;
+    padding: none;
     font-family: Handjet,'Courier New', Courier, monospace;
     font-style: italic;
     font-weight: 900;
